--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: NK Creative
     <div class="text-box">
         <h1>nk creative</h1>
         <p>The place where creativity meets passion</p>
-        <a href="" class="book--button">Book now</a>
+        <a href="/contact/" class="book--button">Book now</a>
     </div>
 
 
@@ -53,7 +53,7 @@ title: NK Creative
 
     <section class="cta">
         <h1>Interested in booking? Let's chat!</h1>
-        <a href="" class="book--button">General Inquiry</a>
+        <a href="/contact/" class="book--button">General Inquiry</a>
 
     </section>
 
